# django-react

./: README.md  docker-compose.yml
django-react/: Dockerfile  pyproject.toml
django-react/profiles_api/: models.py
django-react/profiles_api/migrations/: 0001_initial.py
django-react/profiles_project/: settings.py
