[tool.poetry]
name = "django-react"
version = "0.1.0"
description = ""
authors = ["horoiwa <horoiwa195@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "2.2"
djangorestframework = "3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
